@@ -3,10 +3,12 @@ package usif
 import (
 	"bufio"
 	"encoding/gob"
-	"github.com/piotrnar/gocoin/client/common"
-	"github.com/piotrnar/gocoin/lib/btc"
 	"os"
 	"sync"
+
+	"github.com/piotrnar/gocoin/client/common"
+	"github.com/piotrnar/gocoin/lib/btc"
+	"github.com/piotrnar/gocoin/lib/chain"
 )
 
 const (
@@ -31,7 +33,7 @@ func ProcessBlockFees(height uint32, bl *btc.Block) {
 
 	for i := 1; i < len(bl.Txs); i++ {
 		txs[bl.Txs[i].Hash.Hash] = i
-		fees[i-1][0] = uint64(3 * bl.Txs[i].NoWitSize + bl.Txs[i].Size)
+		fees[i-1][0] = uint64(3*bl.Txs[i].NoWitSize + bl.Txs[i].Size)
 		fees[i-1][1] = uint64(bl.Txs[i].Fee)
 		fees[i-1][2] = uint64(i)
 	}
@@ -109,4 +111,75 @@ func LoadBlockFees() {
 	}
 
 	f.Close()
+}
+
+var (
+	AverageFeeMutex     sync.Mutex
+	AverageFeeBytes     uint64
+	AverageFeeTotal     uint64
+	AverageFee_SPB      float64
+	averageFeeLastBlock *chain.BlockTreeNode
+	averageFeeLastCount uint = 0xffffffff
+)
+
+func GetAverageFee() float64 {
+	common.Last.Mutex.Lock()
+	end := common.Last.Block
+	common.Last.Mutex.Unlock()
+
+	common.LockCfg()
+	blocks := common.CFG.Stat.FeesBlks
+	common.UnlockCfg()
+	if blocks <= 0 {
+		blocks = 1 // at leats one block
+	}
+
+	AverageFeeMutex.Lock()
+	defer AverageFeeMutex.Unlock()
+
+	if end == averageFeeLastBlock && averageFeeLastCount == blocks {
+		return AverageFee_SPB // we've already calculated for this block
+	}
+
+	averageFeeLastBlock = end
+	averageFeeLastCount = blocks
+
+	AverageFeeBytes = 0
+	AverageFeeTotal = 0
+
+	for blocks > 0 {
+		bl, _, e := common.BlockChain.Blocks.BlockGet(end.BlockHash)
+		if e != nil {
+			return 0
+		}
+		block, e := btc.NewBlockX(bl, end.BlockHash)
+		if e != nil {
+			return 0
+		}
+
+		rb, cbasetx := GetReceivedBlockX(block)
+		var fees_from_this_block int64
+		for o := range cbasetx.TxOut {
+			fees_from_this_block += int64(cbasetx.TxOut[o].Value)
+		}
+		fees_from_this_block -= int64(btc.GetBlockReward(end.Height))
+
+		if fees_from_this_block > 0 {
+			AverageFeeTotal += uint64(fees_from_this_block)
+		}
+
+		AverageFeeBytes += uint64(rb.ThePaidVSize)
+
+		blocks--
+		end = end.Parent
+	}
+	if AverageFeeBytes == 0 {
+		if AverageFeeTotal != 0 {
+			panic("Impossible that miner gest a fee with no transactions in the block")
+		}
+		AverageFee_SPB = 0
+	} else {
+		AverageFee_SPB = float64(AverageFeeTotal) / float64(AverageFeeBytes)
+	}
+	return AverageFee_SPB
 }
